--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/Reset.css">
     <!-- font-awesome CDN图标库 -->
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=e17da66ad4391278dfe2e05f3920729d"></script>
     <title>vue-elm-app</title>
     <style>
       html,body {
